--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -1,2 +1,206 @@
 
-{% extends 'base.html.twig' %}
+{% extends 'devAid/layout.html.twig' %}
+
+{% set nav_items = [
+    {
+        'li_class': 'nav-item sr-only',
+        'a_class': 'nav-link scrollto',
+        'href': '#promo',
+        'text': 'Inicio',
+    },
+    {
+        'li_class': 'nav-item',
+        'a_class': 'nav-link scrollto',
+        'href': '#projects',
+        'text': 'Proyectos',
+    },
+    {
+        'li_class': 'nav-item',
+        'a_class': 'nav-link scrollto',
+        'href': '#socials',
+        'text': 'Redes Sociales',
+    },
+    {
+        'li_class': 'nav-item',
+        'a_class': 'nav-link scrollto',
+        'href': '#contact',
+        'text': 'Contacto',
+    },
+] %}
+
+{% block content %}
+    <!---//Facebook button code-->
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+
+    <!-- ******PROMO****** -->
+    <section id="promo" class="promo section offset-header">
+        <div class="container text-center">
+            <h2 class="title">ThenLabs<span class="highlight"></span></h2>
+            <p class="intro">Nos dedicamos a crear y gestionar proyectos de software de código abierto.</p>
+            <div class="btns">
+                <a class="btn btn-cta-secondary" href="{{ path('about') }}" target="_blank">Conocer más</a>
+            </div>
+            <ul class="meta list-inline">
+                <li class="list-inline-item"><a href="https://github.com/thenlabs" target="_blank">Ver en GitHub</a></li>
+            </ul><!--//meta-->
+        </div><!--//container-->
+        <div class="social-media">
+            <div class="social-media-inner container text-center">
+                <ul class="list-inline mb-2">
+                    <li class="list-inline-item twitter-follow">
+                        <a href="https://twitter.com/3rdwave_themes" class="twitter-follow-button" data-show-count="false">Follow @3rdwave_themes</a>
+                        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                    </li><!--//twitter-follow-->
+                    <li class="list-inline-item twitter-tweet">
+                        <a href="https://twitter.com/share" class="twitter-share-button" data-via="3rdwave_themes" data-hashtags="bootstrap">Tweet</a>
+                        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                    </li><!--//twitter-tweet-->
+                    <li class="list-inline-item facebook-like">
+                         <div class="fb-like" data-href="https://themes.3rdwavemedia.com/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
+                    </li><!--//facebook-like-->
+                </ul>
+            </div>
+        </div>
+    </section><!--//promo-->
+
+    <!-- ******ABOUT****** -->
+    <section id="projects" class="about section">
+        <div class="container">
+            <h2 class="title text-center">Proyectos</h2>
+            <p class="intro text-center">El siguiente listado muestra de manera cronológica los proyectos de nuestra organización. En el caso de los que contienen la etiqueta "Anterior" queremos aclarar que fueron creados antes de nuestra existencia como proyecto, no obstante en lo adelante serán gestionados por nosotros.</p>
+            <div class="row">
+                <div class="item col-lg-4 col-md-6 col-12">
+                    <div class="content">
+                        <h3 class="sub-title">GluePHP</h3>
+                        <div>
+                            <span class="badge badge-info">PHP</span>
+                            <span class="badge badge-success">Framework</span>
+                            <span class="badge badge-warning">Anterior</span>
+                        </div>
+                        <p>Framework PHP para crear aplicaciones de una sola página (SPA).</p>
+                        <div>
+                            <a href="https://gluephp.readthedocs.io/es/latest/index.html" class="btn btn-secondary btn-sm" target="_blank">Ver Proyecto</a>
+                        </div>
+                    </div><!--//content-->
+                </div><!--//item-->
+
+                <div class="item col-lg-4 col-md-6 col-12">
+                    <div class="content">
+                        <h3 class="sub-title">PyramidalTests</h3>
+                        <div>
+                            <span class="badge badge-info">PHP</span>
+                            <span class="badge badge-success">Framework</span>
+                            <span class="badge badge-warning">Anterior</span>
+                        </div>
+                        <p>Convierte PHPUnit en un framework BDD.</p>
+                        <div>
+                            <a href="https://github.com/andaniel05/PyramidalTests" class="btn btn-secondary btn-sm" target="_blank">  Ver Proyecto</a>
+                        </div>
+                    </div><!--//content-->
+                </div><!--//item-->
+
+                <div class="item col-lg-4 col-md-6 col-12">
+                    <div class="content">
+                        <h3 class="sub-title">Components</h3>
+                        <div>
+                            <span class="badge badge-info">PHP</span>
+                        </div>
+                        <p>Paquete PHP para la creación de tipos de componentes personalizados.</p>
+                        <div>
+                            <a href="https://github.com/thenlabs/components" class="btn btn-secondary btn-sm" target="_blank">Ver Proyecto</a>
+                        </div>
+                    </div><!--//content-->
+                </div><!--//item-->
+
+                <div class="clearfix visible-md"></div>
+
+                <div class="item col-lg-4 col-md-6 col-12">
+                    <div class="content">
+                        <h3 class="sub-title">ClassBuilder</h3>
+                        <div>
+                            <span class="badge badge-info">PHP</span>
+                        </div>
+                        <p>Paquete PHP para la construir clases dinámicamente.</p>
+                        <div>
+                            <a href="https://github.com/thenlabs/class-builder" class="btn btn-secondary btn-sm" target="_blank">Ver Proyecto</a>
+                        </div>
+                    </div><!--//content-->
+                </div><!--//item-->
+
+                <div class="item col-lg-4 col-md-6 col-12">
+                    <div class="content">
+                        <h3 class="sub-title">ThenCLI</h3>
+                        <div>
+                            <span class="badge badge-info">PHP</span>
+                        </div>
+                        <p>Herramientas de línea de comandos para gestionar proyectos de la comunidad.</p>
+                        <div>
+                            <a href="https://github.com/thenlabs/cli" class="btn btn-secondary btn-sm" target="_blank">Ver Proyecto</a>
+                        </div>
+                    </div><!--//content-->
+                </div><!--//item-->
+
+                <div class="item col-lg-4 col-md-6 col-12">
+                    <div class="content">
+                        <h3 class="sub-title">ComposedViews</h3>
+                        <div>
+                            <span class="badge badge-info">PHP</span>
+                            <span class="badge badge-success">Framework</span>
+                        </div>
+                        <p>Framework PHP para la creación de vistas reutilizables.</p>
+                        <div>
+                            <a href="https://github.com/thenlabs/composed-views" class="btn btn-secondary btn-sm" target="_blank">Ver Proyecto</a>
+                        </div>
+                    </div><!--//content-->
+                </div><!--//item-->
+            </div><!--//row-->
+        </div><!--//container-->
+    </section><!--//about-->
+
+    <!-- ******SOCIALS****** -->
+    <section id="socials" class="contact section has-pattern">
+        <div class="container">
+            <div class="contact-inner">
+                <h2 class="title  text-center">Redes Sociales</h2>
+                <div class="text-center">
+                    <p class="text-center">I hope you find this Bootstrap template useful. <br />Feel free to get in touch if you have any questions or suggestions.</p>
+
+                    <ul class="social-icons list-inline">
+                        <li class="list-inline-item"><a href="https://twitter.com/3rdwave_themes" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.facebook.com/3rdwavethemes" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li class="list-inline-item"><a href="https://medium.com/@3rdwave_themes/" target="_blank"><i class="fab fa-medium-m"></i></a></li>
+                        <li class="list-inline-item"><a href="https://dribbble.com/Xiaoying" target="_blank"><i class="fab fa-dribbble"></i></a></li>
+                        <li class="list-inline-item last"><a href="https://themes.3rdwavemedia.com/contact/" target="_blank"><i class="fas fa-envelope"></i></a></li>
+                    </ul>
+                </div>
+            </div><!--//contact-inner-->
+        </div><!--//contact-->
+    </section><!--//contact-->
+
+    <!-- ******CONTACT****** -->
+    <section id="contact" class="contact section has-pattern" style="padding-top: 0">
+        <div class="container">
+            <div class="contact-inner">
+                <h2 class="title  text-center">Contactar</h2>
+                <div class="info text-center">
+                    <p class="text-center">Si desea contactar con nosotros puede enviarnos un correo electrónico a la dirección <br> <a href="mailto:thenlabs@gmail.com">thenlabs@gmail.com</a></p>
+                </div><!--//info-->
+            </div><!--//contact-inner-->
+        </div><!--//container-->
+    </section><!--//contact-->
+
+    <!-- ******FOOTER****** -->
+    <footer class="footer">
+        <div class="container text-center">
+            <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
+            <small class="copyright">Designed with <i class="fas fa-heart"></i> by <a href="https://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+        </div><!--//container-->
+    </footer><!--//footer-->
+{% endblock %}
