--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -143,7 +143,7 @@
             <div class="contact-inner">
                 <h2 class="title  text-center">Redes Sociales</h2>
                 <div class="text-center">
-                    <p class="text-center">Dado que intentamos a estar en constante evolución <br> usted puede suscribirse a nuestras redes sociales si desea mantenerse informado.</p>
+                    <p class="text-center">Dado que pretendemos estar en constante desarrollo <br> usted puede suscribirse a nuestras redes sociales si desea mantenerse informado.</p>
 
                     <ul class="social-icons list-inline">
                         <li class="list-inline-item"><a href="{{ telegram_url }}" target="_blank"><i class="fab fa-telegram"></i></a></li>
@@ -166,12 +166,4 @@
             </div><!--//contact-inner-->
         </div><!--//container-->
     </section><!--//contact-->
-
-    <!-- ******FOOTER****** -->
-    <footer class="footer">
-        <div class="container text-center">
-            <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
-            <small class="copyright">Designed with <i class="fas fa-heart"></i> by <a href="https://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
-        </div><!--//container-->
-    </footer><!--//footer-->
 {% endblock %}
