--- a/templates/devAid/page-faq.html.twig
+++ b/templates/devAid/page-faq.html.twig
@@ -5,16 +5,22 @@
     <section id="docs" class="docs section">
         <div class="container">
             <div class="docs-inner">
-                <h2 class="title text-center">Preguntas Frecuentes</h2>
+                <h2 class="title text-center" style="margin-bottom: 50px">Preguntas Frecuentes</h2>
 
                 <div class="block">
                     <h4 class="sub-title">1. ¿Qué es ThenLabs?</h4>
-                    <p>ThenLabs se podría definir como una Startup del sector de la informática dedicada a crear y gestionar proyectos de software de código abierto.</p>
+                    <p>ThenLabs se puede definir como una Startup del sector de la informática dedicada a crear y gestionar proyectos de software de código abierto.</p>
                 </div><!--//block-->
 
                 <div class="block">
                     <h4 class="sub-title">2. ¿Por qué una Startup?</h4>
-                    <p>Nos definimos como una Startup dado que somos un emprendimiento que recién comienza y que pensamos escalarlo de diferentes maneras a medida que se vayan alcanzando una serie de objetivos planificados.</p>
+                    <p>Nos definimos como una Startup dado que somos un emprendimiento que recién comienza y que pensamos escalarlo de diferentes maneras a medida que se vayan alcanzando una serie de objetivos.</p>
+                </div><!--//block-->
+
+                <div class="block">
+                    <h4 class="sub-title">3. ¿Qué tipo de proyectos realizan?</h4>
+                    <p>Mayormente nos dedicamos a crear proyectos base que serán usados por otros programadores a la hora de crear nuevos proyectos de software. Dicho de otra manera, hacemos herramientas para programadores.</p>
+                    <p>Aunque no estamos encasillados en determinadas áreas en específico, todos los proyectos que hemos desarrollado hasta el momento están relacionados con el desarrollo web con PHP. Muchos de los venideros también estarán relacionados con esta área.</p>
                 </div><!--//block-->
 
                 <div class="block">
