--- a/templates/devAid/page-docs.html.twig
+++ b/templates/devAid/page-docs.html.twig
@@ -1,10 +1,18 @@
 
 {% extends 'devAid/layout.html.twig' %}
 
+{% block styles %}
+    {{ parent() }}
+    <style type="text/css">
+        h2, h3, h4, h5, h6 { margin: 40px 0 25px 0; }
+    </style>
+{% endblock %}
+
 {% block content %}
     <section id="docs" class="docs section">
         <div class="container">
             <div class="docs-inner">
+                <h2 class="title text-center">{{ contentTitle }}</h2>
                 {{ content|raw }}
             </div><!--//docs-inner-->
         </div><!--//container-->
