--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -79,7 +79,7 @@
                         </div>
                         <p>Convierte PHPUnit en un framework BDD.</p>
                         <div>
-                            <a href="{{ path('docs', { project: 'pyramidal-tests', branch: 'master', resource: 'README.es.md' }) }}" class="btn btn-secondary btn-sm">  Ver Proyecto</a>
+                            {# <a href="{{ path('docs', { project: 'pyramidal-tests', branch: 'master', language: 'es', resource: 'README.es', extension: 'dhtml' }) }}" class="btn btn-secondary btn-sm">  Ver Proyecto</a> #}
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
@@ -92,7 +92,7 @@
                         </div>
                         <p>Paquete PHP para la creación de tipos de componentes personalizados.</p>
                         <div>
-                            <a href="{{ path('docs', { project: 'components', branch: 'master', resource: 'docs/es/index.md' }) }}" class="btn btn-secondary btn-sm">Ver Proyecto</a>
+                            <a href="{{ path('docs', { project: 'components', branch: 'master', language: 'es', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">Ver Proyecto</a>
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
@@ -107,7 +107,7 @@
                         </div>
                         <p>Paquete PHP para la construir clases dinámicamente.</p>
                         <div>
-                            <a href="{{ path('docs', { project: 'class-builder', branch: 'master', resource: 'docs/es/index.md' }) }}" class="btn btn-secondary btn-sm">Ver Proyecto</a>
+                            <a href="{{ path('docs', { project: 'class-builder', branch: 'master', language: 'es', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">Ver Proyecto</a>
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
@@ -120,7 +120,7 @@
                         </div>
                         <p>Herramientas de línea de comandos para gestionar proyectos de la comunidad.</p>
                         <div>
-                            <a href="{{ path('docs', { project: 'cli', branch: 'master', resource: 'docs/es/index.md' }) }}" class="btn btn-secondary btn-sm">Ver Proyecto</a>
+                            <a href="{{ path('docs', { project: 'cli', branch: 'master', language: 'es', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">Ver Proyecto</a>
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
@@ -134,7 +134,7 @@
                         </div>
                         <p>Framework PHP para la creación de vistas reutilizables.</p>
                         <div>
-                            <a href="{{ path('docs', { project: 'composed-views', branch: 'master', resource: 'docs/es/index.md' }) }}" class="btn btn-secondary btn-sm">Ver Proyecto</a>
+                            <a href="{{ path('docs', { project: 'composed-views', branch: 'master', language: 'es', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">Ver Proyecto</a>
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
