--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -79,7 +79,7 @@
                         </div>
                         <p>Convierte PHPUnit en un framework BDD.</p>
                         <div>
-                            {# <a href="{{ path('docs', { project: 'pyramidal-tests', branch: 'master', language: 'es', resource: 'README.es', extension: 'dhtml' }) }}" class="btn btn-secondary btn-sm">  Ver Proyecto</a> #}
+                            <a href="{{ path('docs', { project: 'pyramidal-tests', branch: 'master', language: 'es', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">  Ver Proyecto</a>
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
