--- a/templates/devAid/page-docs.html.twig
+++ b/templates/devAid/page-docs.html.twig
@@ -39,11 +39,10 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col">
-                            <iframe data-aa="1388745" src="//acceptable.a-ads.com/1388745" scrolling="no" style="border:0px; padding:0; width:100%; height:100%; overflow:hidden" allowtransparency="true"></iframe>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="col-lg-9">
