--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -52,19 +52,18 @@
     <section id="projects" class="about section">
         <div class="container">
             <h2 class="title text-center">Proyectos</h2>
-            <p class="intro text-center">El siguiente listado muestra de manera cronológica los proyectos de nuestra organización. En el caso de los que contienen la etiqueta "Anterior" queremos aclarar que fueron creados antes de nuestra existencia como proyecto, no obstante en lo adelante serán gestionados por nosotros.</p>
+            <p class="intro text-center">El siguiente listado muestra los proyectos de nuestra organización. En el caso de los que contienen la etiqueta "Anterior" queremos aclarar que fueron creados antes de nuestra existencia como proyecto, no obstante en lo adelante serán de alguna manera retomados por nosotros.</p>
             <div class="row">
                 <div class="item col-lg-4 col-md-6 col-12">
                     <div class="content">
-                        <h3 class="sub-title">GluePHP</h3>
+                        <h3 class="sub-title">ComposedViews</h3>
                         <div>
                             <span class="badge badge-info">PHP</span>
                             <span class="badge badge-success">Framework</span>
-                            <span class="badge badge-warning">Anterior</span>
                         </div>
-                        <p>Framework PHP para crear aplicaciones de una sola página (SPA).</p>
+                        <p>Framework PHP para la creación de vistas reutilizables.</p>
                         <div>
-                            <a href="https://gluephp.readthedocs.io/es/latest/index.html" class="btn btn-secondary btn-sm" target="_blank">Ver Proyecto</a>
+                            <a href="{{ path('docs', { project: 'composed-views', branch: 'master', language: 'es', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">Ver Proyecto</a>
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
@@ -127,14 +126,16 @@
 
                 <div class="item col-lg-4 col-md-6 col-12">
                     <div class="content">
-                        <h3 class="sub-title">ComposedViews</h3>
+                        <h3 class="sub-title">GluePHP</h3>
                         <div>
                             <span class="badge badge-info">PHP</span>
                             <span class="badge badge-success">Framework</span>
+                            <span class="badge badge-warning">Anterior</span>
+                            <span class="badge badge-danger">Abandonado</span>
                         </div>
-                        <p>Framework PHP para la creación de vistas reutilizables.</p>
+                        <p>Framework PHP para crear aplicaciones de una sola página (SPA).</p>
                         <div>
-                            <a href="{{ path('docs', { project: 'composed-views', branch: 'master', language: 'es', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">Ver Proyecto</a>
+                            <a href="https://gluephp.readthedocs.io/es/latest/index.html" class="btn btn-secondary btn-sm" target="_blank">Ver Proyecto</a>
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
